# minecraft-clone

./: .gitignore  BUGS.md  DIFF.md  FUTURE_CHANGES.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: install-minecraft-textures.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  raw_mouse.rs
src/audio/: Audio.ts
src/core/: Desktop.ts  Game.ts  GameInput.ts  GameLifecycle.ts  GameLoop.ts  GameScreens.ts  GameShared.ts  Settings.ts  WorldSave.ts
tests/: audit-fixes.test.mjs  bugfix-regressions.test.mjs  desktop-worlds.test.mjs  diff-animal-interactions.test.mjs  diff-animal-items.test.mjs  diff-base-terrain-unit.test.mjs  diff-biome-decorator.test.mjs  diff-biome-map.test.mjs  diff-decorator-blocks.test.mjs  diff-entities.test.mjs  diff-hostiles.test.mjs  diff-navigation.test.mjs  diff-ore-generator.test.mjs  diff-passive-ai.test.mjs  diff-silverfish-behavior.test.mjs  diff-silverfish.test.mjs  diff-spawning.test.mjs  diff-structures.test.mjs  diff-villagers.test.mjs  diff-wool-palette.test.mjs  diff-worldgen-carvers.test.mjs  diff-worldgen-decorators.test.mjs  entity-models-overworld.test.mjs  fundamental-systems.test.mjs  gameplay-polish.test.mjs  held-item.test.mjs  render-regressions.test.mjs  slime-chunks.test.mjs  stage10.test.mjs  stage11.test.mjs  stage6.test.mjs  stage7.test.mjs  stage8.test.mjs  stage9.test.mjs  vanilla-worldgen.test.mjs  village-graph.test.mjs
(+110 files in other folders)
