[package]
name = "realmcraft"
version = "1.0.0"
description = "A standalone voxel sandbox"
authors = ["Realmcraft"]
edition = "2021"

[lib]
name = "realmcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Input",
  "Win32_UI_WindowsAndMessaging"
] }
